[project]
name = "uc-intg-psn"
version = "1.1.6"
description = "UC Integration for PlayStation Network"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyee>=9.0.0",
    "ucapi==0.5.1",
    "PSNAWP==3.0.1",
    "pyrate_limiter==3.9.0",
    "aiohttp>=3.13.2",
    "ucapi-framework==1.8.2",
    "packaging>=25.0"
]
