[project]
name = "uc-intg-psn"
version = "2.0.0"
description = "UC Integration for PlayStation Network"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pyee>=9.0.0",
    "ucapi==0.6.0",
    "PSNAWP==3.0.3",
    "pyrate_limiter>=4.0.2,<5.0.0",
    "aiohttp>=3.13.2",
    "ucapi-framework==1.9.1",
    "packaging>=25.0",
    "playdirector>=0.2.2",
]
